--- a/app/src/main/res/layout/item_coin.xml
+++ b/app/src/main/res/layout/item_coin.xml
@@ -31,12 +31,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Activo" />
+            tools:text="active" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
