--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -57,7 +57,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintTop_toBottomOf="@id/tvActive"
             tools:text="Description" />
 
         <TextView
